# SO2-Labs

./: CMakeLists.txt  README.md
Chat/: Client.py  Server.py
DPP/: CMakeLists.txt  main.cpp
DPP/mutexPhil/: mPhilDPP.cpp  mPhilDPP.h
DPP/noMutexPhil/: nPhilDPP.cpp  nPhilDPP.h  sPhilDPP.cpp  sPhilDPP.h
